packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__special_jsx.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2281
expression: output
---
==INPUT==


// don't transpile jsx with non-plain-object props
import { jsx } from '@qwik.dev/core';

export const App = () => {
    const props = {}
    return jsx('div', props, 'Hello Qwik');
}

============================= test.tsx ==

// don't transpile jsx with non-plain-object props
import { jsx } from '@qwik.dev/core';
//
export const App = ()=>{
    const props = {};
    return jsx('div', props, 'Hello Qwik');
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA,kDAAkD;AAClD,SAAS,GAAG,QAAQ,iBAAiB;;AAErC,OAAO,MAAM,MAAM;IACf,MAAM,QAAQ,CAAC;IACf,OAAO,IAAI,OAAO,OAAO;AAC7B,EAAC\"}")
== DIAGNOSTICS ==

[]
