packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__transform_qrl_in_regular_prop.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$, $ } from '@qwik.dev/core';
		export const Cmp = component$(() =>
			<Cmp foo={$(() => console.log('hi there'))}>Hello Qwik</Cmp>);
		
============================= test.tsx_Cmp_component_4ryKJTOKjWE.ts (ENTRY POINT)==

import { Cmp } from "./test";
import { $ } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
export const Cmp_component_4ryKJTOKjWE = ()=>/*#__PURE__*/ _jsxSorted(Cmp, null, {
        foo: $(()=>console.log('hi there'))
    }, "Hello Qwik", 3, "u6_0");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAEgC,kBAC7B,WAAC;QAAI,KAAK,EAAE,IAAM,QAAQ,GAAG,CAAC;OAAc\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    153
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEE,OAAO,MAAM,oBAAM,0CAC4C\"}")
== DIAGNOSTICS ==

[]
